# SkynetNew

./: .env  .env.example  .replit  LOCAL_SETUP_GUIDE.md  README.md  backend.py  chat_handler.py  database.py  dependencies.txt  export_project.py  frontend.py  main.py  memory.py  openai_test.py  pyproject.toml  replit.md  requirements.txt  run_backend.py  run_frontend.py  testapi.py  vercel.json
.streamlit/: config.toml
api/: index.py
attached_assets/: Pasted-Create-SkyNetAI-Cyberpunk-AI-Chatbot-Build-a-cyberpunk-themed-AI-chatbot-with-the-following-specif-1752146156540_1752146156541.txt
static/: cyberpunk.css
